# infa

./: README.md  дз №1  задача
code clion/1_contest/: CMakeLists.txt  binary.cpp  empty_square.cpp  fact_number.cpp  kol_vo_cifr.cpp  nok.cpp  romb.cpp  simple_number.cpp  thriangle.cpp
code clion/2_contest/: CMakeLists.txt  dex_translate.cpp  nonacci.cpp  uppercase_letters.cpp
code clion/2sem_10_seminar/: CMakeLists.txt  Rational.cpp  difference_sequence.cpp  equal_sequence.cpp  greater_less.cpp  intersection.cpp
code clion/2sem_10seminar/: CMakeLists.txt  difference_sequence.cpp  equal_sequence.cpp  eraseSomeElements.cpp  greater_less.cpp  intersection.cpp  sequence.cpp
code clion/2sem_11seminar/: CMakeLists.txt  connection.cpp  goblins_brain.cpp  stl_except.cpp
code clion/2sem_1seminar/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  task.cpp
code clion/2sem_2seminar/: CMakeLists.txt  game.cpp  material.cpp  zoo.cpp
code clion/2sem_4seminar/: CMakeLists.txt
code clion/2sem_5seminar/: CMakeLists.txt
code clion/2sem_7seminar/: Accumulate.cpp  CMakeLists.txt  Timer.cpp  Value.cpp  class_template.cpp  min_from_rand.cpp  template_student.cpp
code clion/3.5/: CMakeLists.txt  main.cpp
code clion/3.6/: CMakeLists.txt  main.cpp
code clion/3.9/: CMakeLists.txt  main.cpp
code clion/4.0/: CMakeLists.txt  main.cpp
code clion/4.2/: CMakeLists.txt  main.cpp
code clion/4.3/: CMakeLists.txt  main.cpp
code clion/4.4/: CMakeLists.txt  main.cpp
code clion/C_micr/: CMakeLists.txt  main.c
code clion/INTEGRAL/: CMakeLists.txt  main.cpp
code clion/KR2021/: CMakeLists.txt  chaos.cpp  cyberdog.cpp  imposter.cpp  lamps1d.cpp  parrot.cpp  sable.cpp  trisolaris.cpp
code clion/KR_2022/: CMakeLists.txt  fifth.cpp  first.cpp  fourth.cpp  integrate.cpp  second.cpp  seventh.cpp  third.cpp
code clion/KR_2sem_2021/: CMakeLists.txt  fifth.cpp  fourth.cpp  second.cpp  seventh.cpp  third.cpp
code clion/SAPER/: CMakeLists.txt  main.cpp
code clion/TETRIS/: CMakeLists.txt  main.cpp
code clion/bin_lab1/: CMakeLists.txt  main.cpp
code clion/homework/: CMakeLists.txt  hw1.cpp
code clion/indicators/: CMakeLists.txt  check_str.cpp  num1.cpp  num2.cpp  num3.cpp  num4.cpp  num5.cpp  num6.cpp  num7.cpp  num8.cpp  num9.cpp
code clion/indicators_1/: CMakeLists.txt  num1.cpp  num2.cpp  num3.cpp  num4.cpp  num5.cpp  num6.cpp  num7.cpp  num8.cpp  num9.cpp
code clion/kr18.1/: CMakeLists.txt  main.cpp
code clion/kr18.2/: CMakeLists.txt  main.cpp  multiplication_matrix.cpp  squirrel.cpp  vect_sum.cpp  water.cpp  weight.cpp
code clion/kr19.1/: CMakeLists.txt  main.cpp  matrix.cpp
code clion/kr19.2/: CMakeLists.txt  main.cpp
code clion/kr19.3/: CMakeLists.txt  main.cpp
code clion/kr19.4/: CMakeLists.txt  main.cpp
code clion/kr2_2019/: CMakeLists.txt  num2.cpp  num3.cpp  num4.cpp
code clion/kr2_2020/: CMakeLists.txt  num1_.cpp  num2.cpp  num3.cpp  num4.cpp  num5.cpp  num7.cpp
code clion/kr2_easy/: CMakeLists.txt  num2.cpp  num3.cpp  num4.cpp  num5.cpp  num6.cpp  num7.cpp
code clion/kr_20/: CMakeLists.txt  matrix.cpp  max_number.cpp  medium.cpp  space_.cpp
code clion/kr_2021/: CMakeLists.txt  num1.cpp  num2.cpp  num3.cpp  num4.cpp  num6.cpp
code clion/proba/: CMakeLists.txt  proba1.cpp
code clion/queue/: CMakeLists.txt  main.cpp
code clion/sem2_8seminar/: Analyzer.cpp  CMakeLists.txt  Name.cpp  Tournament.cpp
code clion/sem2_9seminar/: AtackControl.cpp  CMakeLists.txt  Date.cpp  Hello_sky_in_the_clouds....cpp  SessionManager.cpp  Telemetry.cpp  Users_activities.cpp  Zoo.cpp  arrow.cpp  cin_for_vector.cpp  num_of_elem_in_word.cpp  quadra_seq.cpp  replace_list_elem.cpp
code clion/sem2_sem_3/: CMakeLists.txt  Figure.cpp  namespace.cpp
code clion/Коды С++/: ! числа.cpp  1.cpp  Двоичный перевод с перестановкой.cpp  Двоичный перевод.cpp  Замена букв.cpp  Кол-во цифр в тексте.cpp  НОК чисел.cpp  Перевернутая картинка.cpp  Простое число по его номеру.cpp  Прямоугольник.cpp  Пустой квадрат.cpp  Ромб.cpp  Строка из 1 и 0.cpp  Сумма 1.cpp  Транспонированная квадратная матрица.cpp  Транспонированная любая матрица.cpp  Треугольник.cpp  Числа больше среднего.cpp  Числа ноначчи.cpp  Число 16-чной формы-1.cpp  Число фибоначчи.cpp  наибольший столбец матрицы.cpp  последовательность в обратном порядке.cpp  функция факториал числа.cpp  число 16-чной формы.cpp
code clion/Коды С++/Контест 2 (1)/: 1.cpp  Контест 2 (1).sln  Контест 2 (1).vcxproj
code clion/Коды С++/Контест 2 (1)/Debug/: vc142.idb  Контест 2 (1).exe.recipe  Контест 2 (1).ilk  Контест 2 (1).vcxproj.FileListAbsolute.txt
code clion/Коды С++/Контест 2 (1)/Debug/Контест 2 (1).tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  Контест 2 (1).lastbuildstate
home work/H_W 3 week/: Теория.txt
home work/H_W 4 week/: Convoy.cpp  game_3.0_.cpp
home work/H_W 5 week/: Student.cpp
homework/H_W 10week/: first.cpp  sixth.cpp
homework/H_W 3 week/: SmartCat.cpp  notVector.cpp
homework/H_W 4 week/: MoneyBox.cpp
homework/H_W 5 week/: Algorithms.cpp
homework/H_W 6 week/: CMakeLists.txt  accumulate.cpp  petrol_station.cpp
homework/H_W 7 week/: Theory_.md
homework/H_W 8 week/: Hello_sky_in_the_clouds....cpp  Theory.md
homework/H_W 9 week/: Rational.cpp  Theory.md  difference_intersection.cpp  ex.cpp
Домашняя работа/H_W 1 week/: дз №1
Домашняя работа/H_W 3 week/: Figure.cpp
Домашняя работа/H_W 4 week/: Predator.cpp
Домашняя работа/H_W 5 week/: Vector2d.cpp  VectorND.cpp  theory.md
дз-1/: задача
дз-3 неделя/: Теория.txt
дз-4 неделя/: Теория.txt
