cmake_minimum_required(VERSION 3.20)
project(1_contest)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_contest main.cpp)
add_executable(nok nok.cpp)
add_executable(simple_number simple_number.cpp)
add_executable(romb romb.cpp)
add_executable(kol_vo_cifr kol_vo_cifr.cpp)
add_executable(binary binary.cpp)
add_executable(thriangle thriangle.cpp)
add_executable(fact_number fact_number.cpp)
add_executable(empty_square empty_square.cpp)
