cmake_minimum_required(VERSION 3.20)
project(2sem_10_seminar)

set(CMAKE_CXX_STANDARD 17)

add_executable(2sem_10_seminar main.cpp)
add_executable(difference_intersection difference_intersection.cpp)
add_executable(difference_sequence difference_sequence.cpp)
add_executable(equal_sequence equal_sequence.cpp)
add_executable(erase_some_elements erase_some_elements.cpp)
add_executable(greater_less greater_less.cpp)
add_executable(intersection intersection.cpp)
add_executable(Rational Rational.cpp)
