cmake_minimum_required(VERSION 3.20)
project(2sem_7seminar)

set(CMAKE_CXX_STANDARD 17)

add_executable(2sem_7seminar main.cpp)
add_executable(min_from_rand min_from_rand.cpp)
add_executable(template_student template_student.cpp)
add_executable(class_template class_template.cpp)
add_executable(Value Value.cpp)
add_executable(Accumulate Accumulate.cpp)
