cmake_minimum_required(VERSION 3.20)
project(KR2021)

set(CMAKE_CXX_STANDARD 17)

add_executable(KR2021 main.cpp)
add_executable(parrot parrot.cpp)
add_executable(sable sable.cpp)
add_executable(cyberdog cyberdog.cpp)
add_executable(lamps1d lamps1d.cpp)
add_executable(trisolaris trisolaris.cpp)
add_executable(chaos chaos.cpp)
add_executable(imposter imposter.cpp)

