cmake_minimum_required(VERSION 3.22)
project(KR_2022)

set(CMAKE_CXX_STANDARD 14)

add_executable(KR_2022 main.cpp)
add_executable(first first.cpp)
add_executable(second second.cpp)
add_executable(third third.cpp)
add_executable(fourth fourth.cpp)
add_executable(fifth  fifth.cpp)
add_executable(seventh seventh.cpp)
add_executable(integrate integrate.cpp)
