cmake_minimum_required(VERSION 3.22)
project(KR_2sem_2021)

set(CMAKE_CXX_STANDARD 17)

add_executable(KR_2sem_2021 main.cpp first.cpp second.cpp third.cpp fourth.cpp fifth.cpp sixth.cpp seventh.cpp)
add_executable(first first.cpp)
add_executable(second second.cpp)
add_executable(third third.cpp)
add_executable(fourth fourth.cpp)
add_executable(fifth fifth.cpp)
add_executable(sixth sixth.cpp)
add_executable(seventh seventh.cpp)
