cmake_minimum_required(VERSION 3.20)
project(kr18_2)

set(CMAKE_CXX_STANDARD 17)

add_executable(kr18_2 main.cpp)
add_executable(water water.cpp)
add_executable(squirrel squirrel.cpp)
add_executable(multiplication_matrix multiplication_matrix.cpp)
add_executable(weight weight.cpp)
add_executable(vect_sum vect_sum.cpp)
