cmake_minimum_required(VERSION 3.20)
project(kr2_2020)

set(CMAKE_CXX_STANDARD 11)

add_executable(kr2_2020 main.cpp)
add_executable(num1_ num1_.cpp)
add_executable(num2 num2.cpp)
add_executable(num3 num3.cpp)
add_executable(num4 num4.cpp)
add_executable(num5 num5.cpp)
add_executable(num7 num7.cpp)
