cmake_minimum_required(VERSION 3.20)
project(sem2_9seminar)

set(CMAKE_CXX_STANDARD 17)

add_executable(sem2_9seminar main.cpp)
add_executable(quadra_seq quadra_seq.cpp)
add_executable(replace_list_elem replace_list_elem.cpp)
add_executable(num_of_elem_in_word num_of_elem_in_word.cpp)
add_executable(Date Date.cpp)
add_executable(arrow arrow.cpp)
add_executable(cin_for_vector cin_for_vector.cpp)
add_executable(Zoo Zoo.cpp)
add_executable(SessionManager SessionManager.cpp)
add_executable(Users_activities Users_activities.cpp)
add_executable(Telemetry Telemetry.cpp)
add_executable(AtackControl AtackControl.cpp)
add_executable(Hello_sky_in_the_clouds... Hello_sky_in_the_clouds....cpp)
